--- a/Airline Statisfaction Analysis/Report & PowerPoint, rmd file/Airline_Passenger_Satisfaction.Rmd
+++ b/Airline Statisfaction Analysis/Report & PowerPoint, rmd file/Airline_Passenger_Satisfaction.Rmd
@@ -1,10 +1,12 @@
 ---
-title: "Airline Passenger Satisfaction"
+title: "Airline Passenger Satisfaction Analysis"
 output: 
-  html_document: 
+  github_document: 
   pdf_document:
     latex_engine: xelatex
-  github_document: 
+  html_document: 
+    toc: true
+    theme: united
 urlcolor: blue
 ---
 
@@ -23,49 +25,57 @@ library('readxl')
 
 # Introduction
 
-### Data Set Information: 
+### Data Set Information:
+
 This data set is a survey conducted in 2015 on Airline Passengers Satisfaction level where it contains other attributes such as Type of Travel, Gender, Airplane Amenities, Flight Distance and more. This data set was uploaded on Kaggle which can be found [here.](https://www.kaggle.com/datasets/teejmahal20/airline-passenger-satisfaction)
 
 ### Goal:
+
 To Answer 3 Research Questions:\
-1. What are the statistically significant predictors for each of the machine learning models? \
-2. What machine learning algorithm produced the highest accuracy in determining airline satisfaction level? \
+1. What are the statistically significant predictors for each of the machine learning models?\
+2. What machine learning algorithm produced the highest accuracy in determining airline satisfaction level?\
 3. How does each model handle imbalanced classes in the response variable?\
 
 ```{r cars}
 # load the data
-df = read_excel('~/Stat473/satisfaction_2015.xlsx')
+df = read_excel('~/Machine-Learning-Project-R/Airline Statisfaction Analysis/Data Set/satisfaction_2015.xlsx')
 glimpse(df)
 ```
 
-# Exploratory Data Analysis 
+# Exploratory Data Analysis
 
 ```{r}
 # Data Dimensions
 dim(df)
 ```
-We are given 24 features and 129,880 total observations for our dataset. 
+
+We are given 24 features and 129,880 total observations for our data set.
+
 ```{r}
 # Check for missing values
 colSums(is.na(df))
 ```
+
 \
-As we can see our Arrival Delay in Minutes attribute has a total of 393 missing values. Since we are given a relatively large data set we will drop the observations with missing values. 
-\
+As we can see our Arrival Delay in Minutes attribute has a total of 393 missing values. Since we are given a relatively large data set we will drop the observations with missing values.\
+
 ```{r}
 # drop missing values
 df = df |> drop_na()
 # check for any missing values
 sum(is.na(df))
 ```
+
 ```{r}
 # check for duplicates
 sum(duplicated(df))
 ```
+
 ```{r}
 # statistical summary using skim function from skimr
 skim(df)
 ```
+
 ```{r}
 # convert categorical variables into factors
 # drop the ID column
@@ -99,52 +109,59 @@ col <- colorRampPalette(c("#BB4444", "#EE9988", "#FFFFFF", "#77AADD", "#4477AA")
 corrplot(corr_matrix, method = 'color', tl.cex = 0.5, title = "Correlation Matrix",
          mar=c(0,0,1,0))
 ```
+
 \
-From the Correlation matrix above we can see that Seat Comfort is high correlated with food/drinks, in flight entertainment, and cleanliness. We can also see On-board service is highly correlated with leg room service, baggage handling, in flight service, and in flight entertainment.
-\
+From the Correlation matrix above we can see that Seat Comfort is high correlated with food/drinks, in flight entertainment, and cleanliness. We can also see On-board service is highly correlated with leg room service, baggage handling, in flight service, and in flight entertainment.\
+
 ```{r echo=TRUE}
 # bar chart on satisfaction
 plot(df[,'Satisfaction'], main = 'Airline Satisfaction', 
      ylab = 'Count', xlab = 'Satisfaction Level', col = rainbow(2))
 ```
+
 \
-Satisfaction level is our response variable where we can clearly see it is a binary classification problem. Satisfaction level has 2 classes either satisfied or neutral/dissatisfied. From the bar chart above we can see that the classes are imbalanced. However, the imbalance is not too wide but we still have too consider that this may cause issues when fitting our models since they can learn a bit more on neutral/dissatisfied than the satisfied passengers.
-\
+Satisfaction level is our response or target variable where from the bar chart above we can clearly see this is a binary classification problem. Satisfaction level has 2 classes which are the passenger was satisfied or neutral/dissatisfied with their flight. From the bar chart above we can see that the classes are slightly imbalanced. However, the imbalance is not too wide but we still have too consider that this may cause issues when training our models since they can learn a bit more on neutral/dissatisfied than the satisfied passengers because they have more data to learn from!\
+
 ```{r echo=TRUE}
 # bar chart on Gender
 plot(df[,'Gender'], main = 'Airline Genders', 
      ylab = 'Count', xlab = 'Gender', col = c('pink','lightblue'))
 ```
+
 ```{r echo=TRUE}
 # bar chart on Airline Class
 plot(df[,'Class'], main = 'Airline Class', 
      ylab = 'Count', xlab = 'Airline Class',  col = c("#E69F00", "#56B4E9", "#009E73"))
 ```
+
 \
-Here we can see from the Gender bar chart that we have an almost even distribution on Females and Males in our data set with a slightly bit more Females. From the Airline Class bar chart we can see that a majority of passengers in our data were buying Business and Economic fares over the Economic Plus fares. 
-\
+Here we can see from the Gender bar chart that we have an almost even distribution on Females and Males in our data set with a slightly bit more Females. From the Airline Class bar chart we can see that a majority of passengers in our data were buying Business and Economic fares over the Economic Plus fares.\
+
 ```{r echo=TRUE}
 # bar chart on Airline Type of Travel
 plot(df[,'TypeTravel'], main = 'Airline Travel Type', 
      ylab = 'Count', xlab = 'Travel Type', col = c("yellow", "#009E73"))
 ```
+
 ```{r echo=TRUE}
 # bar chart on Airline Customer Type
 plot(df[,'CustomerType'], main = 'Airline Customer Type', 
      ylab = 'Count', xlab = 'Customer Type', col = c("#56B4E9", "#009E73"))
 ```
+
 \
-Here we can see that a majority of the passengers collect in our data set were primarily traveling for business purposes rather than personal situations. Note this may include bias since majority of the passengers are in this data are traveling for business. Also we can see that a majority of the passengers in the data are loyal customers and we have a few disloyal or new customers. 
-\
+Here we can see that a majority of the passengers collected in our data set were primarily traveling for business purposes rather than personal situations. Note this might include some bias since majority of the passengers are in this data set are traveling for business and one can argue that their experience with flights is greater thus their expectations are greater. Also we can see that a majority of the passengers in the data are loyal customers and that we have a few disloyal/new customers.\
+
 ```{r echo=TRUE}
 # Age histogram separated by Gender
 ggplot(df, aes(x = Age, color = Gender, fill = Gender)) + 
   geom_histogram(bins = 30) + 
   labs(title = "Age Histogram Separated by Gender", x = "Age", y = "Count")
 ```
+
 \
-From the Age histogram above we can see that a majority of the passengers Age in our data range between 25 to 60 years old. Now if we separate the age histogram by gender we can see that we have more Females in all ranges of ages than Males. 
-\
+From the Age histogram above we can see that a majority of the passengers Age in our data range between 25 to 60 years old. Now if we separate the age histogram by gender we can see that we have more Females in all ranges of ages than Males.\
+
 ```{r echo=TRUE}
 ggplot(df, aes(x = FlightDistance)) +                         
   geom_histogram(aes(y = after_stat(density)), bins = 40, fill = "lightblue") +
@@ -153,10 +170,9 @@ ggplot(df, aes(x = FlightDistance)) +
 ```
 
 \
-Here we can see the majority of Flight Distances were no more than 1000 kilometers. 
-\
+Here we can see the majority of Flight Distances were no more than 1000 kilometers.\
 
-# Modeling 
+# Modeling
 
 ```{r include=FALSE}
 # Metric Functions
@@ -205,9 +221,10 @@ test_set = df[test_id, ]
 log.fit = glm(Satisfaction ~., data = train_set, family = 'binomial')
 summary(log.fit)
 ```
+
 \
-Considering a Hypothesis test, where our null hypothesis is $H_0: \beta_i = 0$ versus our alternative hypothesis $H_a: \beta_i \neq 0$, where $i =$ all of the predictors used. We can see that the only predictor variable that fail to reject our null hypothesis when using a significance level of, $\alpha = 0.05$, is Flight Distance. Hence, the attribute Flight Distance is statistically insignificant to our Logistic Regression Model. We will fit another Logistic Regression model but with only the statistically significant predictors. 
-\
+Conducting a Hypothesis test, where our null hypothesis is $H_0: \beta_i = 0$ versus our alternative hypothesis $H_a: \beta_i \neq 0$, where $i =$ all of the predictors used. We can see that the only predictor variable that fail to reject our null hypothesis, when using a significance level of, $\alpha = 0.05$, is Flight Distance. Hence, the attribute Flight Distance is statistically insignificant to our Logistic Regression Model. We will fit another Logistic Regression model but this time with only the statistically significant predictors.\
+
 ```{r}
 # Fitting a Logistic Regression Model with all significant predictors
 
@@ -222,6 +239,7 @@ log.fit2 = glm(Satisfaction ~ Gender + CustomerType + Age + TypeTravel +
 
 summary(log.fit2)
 ```
+
 ```{r}
 # log confusion matrix with significant predictors 
 y_pred_log = predict(log.fit2, newdata = test_set, type = 'response')
@@ -232,9 +250,10 @@ cat('\nThe Accuracy is:', accuracy(log_cm))
 cat('\nThe Sensitivity is:', sensitivity(log_cm))
 cat('\nThe Specificity is:', specificity(log_cm))
 ```
+
 \
-The accuracy of the Logistic Regression model with only the significant predictors is 87.5\%. However, observing other metrics such as sensitivity and specificity we can see that the model had a higher sensitivity rate compared to the specificity rate. This is due to the imbalanced classes in our satisfaction response variable. Recall, we had more neutral/dissatisfied passengers in our data set, which explains why our sensitivity rate is greater. Our model learned the neutral/dissatisfied passengers better than satisfied passengers. If we want to accurately determine a satsified passeneger we might want to increase the specificity rate. 
-\
+The accuracy of the Logistic Regression model that was trained with the significant predictors was 87.5%. However, observing other metrics such as sensitivity and specificity we can see that the model had a higher sensitivity rate compared to the specificity rate. This is due to the imbalanced classes in our satisfaction response variable. Recall, we had more neutral/dissatisfied passengers in our data set, which explains why our sensitivity rate is greater. Our model learned the neutral/dissatisfied passengers better than satisfied passengers. If we want to accurately determine a satisfied passenger we might want to increase the specificity rate.\
+
 ```{r}
 # Logistic Regression ROC Curve
 y_pred_log = predict(log.fit2, newdata = test_set, type = 'response')
@@ -243,13 +262,14 @@ perf = performance(pred_log, "tpr", "fpr")
 plot(perf, main = "Logistic Regression ROC Curve")
 abline(0, 1, lty=3)
 ```
+
 ```{r}
 # Logistic Regression AUC Value
 log_auc = as.numeric(performance(pred_log, "auc")@y.values)
 log_auc
 ```
 
-## Random Forest 
+## Random Forest
 
 ```{r}
 # Fitting a Random Forest with all predictors
@@ -259,6 +279,7 @@ set.seed(123)
 forest.fit = randomForest(Satisfaction ~., data = train_set, mtry = round(sqrt(p)), importance = TRUE)
 forest.fit
 ```
+
 ```{r}
 # Random Forest Confusion Matrix
 yhat.forest = predict(forest.fit, test_set, type = "class")
@@ -268,26 +289,29 @@ cat('\nThe Accuracy is:', accuracy(forest_cm))
 cat('\nThe Sensitivity is:', sensitivity(forest_cm))
 cat('\nThe Specificity is:', specificity(forest_cm))
 ```
+
 \
-Now the random forest model returned an accuracy of 96.52\% on the testing data, implying the model did a pretty good job. This is a pretty good accuracy since the model predicted on unseen data, testing set, implying our model did not over fit on the training data. This means our Random Forest has low variance and high bias which is the most optimal situation. Now, Random Forest handled the imbalanced classes in our response pretty good as well, this may be due to the splits on the several decision trees. 
-\
+Now the random forest classifer model returned an accuracy of 96.52% on the testing data, implying the model a good job in predicting the satisfaction levels despite the model never seeing the data. This implies our model did not over train or over fit on the training data which is what we wanted. This means our Random Forest algorithm has low variance and high bias which is the most optimal situation. Also, our random forest model was able to handle the imbalanced classes in our response pretty well which may be due to the splits that the several decision trees perform.\
+
 ```{r}
 # Random Forest Feature Importance
 varImpPlot(forest.fit, main = "Variable Importance (Random Forest)", type = 2)
 ```
-\
-We see that having the predictor Online Boarding on top of the trees had the overall greatest decrease in gini index. Hence, implying online Boarding is a significant predictor in the splitting of the nodes for our Random Forest model. 
-\
 
-## Boosting 
+\
+We see that having the predictor Online Boarding on top of the trees had the overall greatest decrease in gini index. Hence, implying online Boarding is a significant predictor in the splitting of the nodes for our Random Forest model.\
+
+## Boosting
 
 ```{r}
 # Encoding Our Satisfaction column 
 df = df |> mutate(satisfaction_numeric = ifelse(Satisfaction == "satisfied",1,0)) |> dplyr::select(-Satisfaction)
 ```
+
 ```{r}
 glimpse(df)
 ```
+
 ```{r}
 # splitting our data into train/test with 80/20
 n = nrow(df)
@@ -299,6 +323,7 @@ test_id = (1:n)[-which(1:n %in% train_id)]
 train_set = df[train_id, ]
 test_set = df[test_id, ]
 ```
+
 ```{r}
 # parameters we check
 grid = expand.grid(
@@ -311,6 +336,7 @@ grid = expand.grid(
 
 head(grid, 10)
 ```
+
 ```{r}
 # grid search for best parameters for our Boosting model
 set.seed(1)
@@ -333,20 +359,23 @@ for(i in 1:nrow(grid)){
 # arranging the miss_classification_rate in ascending order
 grid |> arrange(miss_classification_rate)
 ```
+
 ```{r}
-# Our best Boosting model with lowest miss classification rate
+# Our best Boosting model with the lowest miss classification rate
 boost.fit.best = gbm(satisfaction_numeric ~ ., train_set, n.trees = 200, 
                      shrinkage = 0.32, interaction.depth = 3,
                      distribution = "bernoulli")
 boost.fit.best
 ```
+
 ```{r}
 # Feature Importance
 summary.gbm(boost.fit.best)
 ```
+
 \
-In our Boosting Model we can see that the predictors that had the most influence in terms of a passenger satisfaction was high dependent on Online Boarding, In Flight WiFi Service, Type of Travel, and Class.
-\
+In our Boosting Model we can see that the predictors that had the most influence in terms of a passenger satisfaction again was highly dependent on Online Boarding, In Flight WiFi Service, Type of Travel, and Class.\
+
 ```{r}
 # Boosting Confusion Matrix
 phat.test.boost.best = predict(boost.fit.best, test_set, type = "response")
@@ -357,9 +386,10 @@ cat('\nThe Accuracy is:', accuracy(boost_cm))
 cat('\nThe Sensitivity is:', sensitivity(boost_cm))
 cat('\nThe Specificity is:', specificity(boost_cm))
 ```
+
 \
-Our boosting algorithm after doing a grid search for the most optimal parameters in terms of the miss-classification rate returned an accuracy of 95.37\%. Overall, the boosting model performed slightly under the Random Forest model which can be due to our parameter tuning. Since Boosting still uses trees to classify an observation this can also explain why it handled the imbalanced satisfaction classes pretty well. 
-\
+Our boosting algorithm after doing a grid search for the most optimal parameters in terms of the lowest miss-classification rate returned an accuracy of 95.37%. Overall, the boosting model performed slightly under the Random Forest accuracy model which can be due to our parameter tuning. Since Boosting still uses trees to classify an observation this can also explain why it handled the imbalanced satisfaction classes pretty well.\
+
 ```{r}
 Models = c('Logistic Regression', 'Random Forest', 'Boosting')
 Accuracy = c(accuracy(log_cm), accuracy(forest_cm), accuracy(boost_cm))
@@ -372,50 +402,17 @@ Results
 
 # Conclusion
 
-In terms of accuracy the best model out of the three models trained was Random Forest which returned an 96\% accuracy on the testing set. While Logistic Regression had the lowest accuracy with a score of 87\% which is still relatively good since it was the score on unseen data. In terms of flexibility, Logistic Regression is the best for real world situations since we can play with the metrics and get the results we need. For Example, if an airline cared about correctly identifying a passenger who was satisfied with the flight we might want to change the threshold on the Logistic model to increase specificity rate to reduce the amount of error in identifying a satisfied passenger. Overall, Boosting was slightly behind Random Forest which could be due to a parameter tuning issue since we only checked a small subset of parameters for our model. 
+In terms of accuracy the best model out of the three models trained was Random Forest which returned an 96% accuracy on the testing set. While Logistic Regression had the lowest accuracy with a score of 87% which is still relatively good since it was the score on unseen data. In terms of flexibility, Logistic Regression is the best for real world situations since we can play with the metrics and get the results we need. For Example, if an airline only cared about correctly identifying a passenger who was satisfied with the flight we might want to change the threshold on the Logistic model to increase specificity rate to reduce the amount of error in identifying a satisfied passenger. Overall, Boosting was slightly behind Random Forest which could be due to a parameter tuning issue since we only checked a small subset of parameters for our model.
 
 ## Business Insights
 
-If an airline cared to increase satisfaction levels of passengers in their airline, we observed that Online Boarding, In Flight WiFi Service, Travel Type, Class, In Flight Entertainment, Leg Room Service, Customer Type, Check In Service, On Board Service, In Flight Service, Seat Comfort, and Departure Arrival Time. However, the attributes that we can control to increase satisfaction level for our airline in this specific order since the level of influence for each attribute is different is given:
+If an airline cared to increase satisfaction levels of passengers in their airline, we observed that Online Boarding, In Flight WiFi Service, Travel Type, Class, In Flight Entertainment, Leg Room Service, Customer Type, Check In Service, On Board Service, In Flight Service, Seat Comfort, and Departure Arrival Time are important influences to a passenger satisfaction level. Now some of the features above can negatively impact satisfaction levels or increase their satisfaction level. However, the attributes that we can control to increase satisfaction level for our airline in this specific order since the level of influence for each attribute is different is given:
 
-1. Online Boarding - make it easier to purchase fares online and see flight information.
-2. In Flight WiFi Service - provide WiFi services to all passengers, can include a premium service bundle that provides faster internet speeds and food/drinks for said customer. 
-3. In Flight Entertainment - Perhaps suggest films, videos, or reading articles for passengers.
-4. Leg Room Service - improve leg room in our seating.
-5. Check In Service & On Board Service - provide excellent service to make them more welcome/comfortable.
-6. In Flight Service - improve our in flight service. 
+1.  Online Boarding - make it easier to purchase fares online and see flight information.
+2.  In Flight WiFi Service - provide WiFi services to all passengers, can include a premium service bundle that provides faster internet speeds and food/drinks for said customer.
+3.  In Flight Entertainment - Perhaps suggest films, videos, or reading articles for passengers.
+4.  Leg Room Service - improve leg room in our seating.
+5.  Check In Service & On Board Service - provide excellent service to make them more welcome/comfortable.
+6.  In Flight Service - improve our in flight service.
 
-An improvement on a combination of features above can lead to greater satisfaction levels from our passengers. Satisfied customers can improve our airline brand and attract new customers to our fleet. 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+An improvement on a combination of features above can lead to greater satisfaction levels from our passengers. Satisfied customers can improve our airline brand and attract new customers to our fleet.
